ArgoCD/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: zephyrus-bot
  namespace: zephyrus
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zephyrus-bot
  template:
    metadata:
      labels:
        app: zephyrus-bot
    spec:
      containers:
        - name: bot
          image: ghcr.io/penti-nameko/zephyrus-bot:v0.2
          imagePullPolicy: Always
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "256Mi"
              cpu: "250m"
