ArgoCD/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zephyrus-web
  namespace: zephyrus
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  ingressClassName: nginx
  rules:
    - host: zephyrus.uniproject.jp
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zephyrus-web
                port:
                  number: 3000
  tls:
    - hosts:
        - zephyrus.uniproject.jp
      secretName: zephyrus-uniproject-jp-tls
